# simple_mt

./: j_easy_splt.txt  j_hard_splt.txt  make_vocab.py  mt.py  pyproject.toml  requirements.txt  train.py  translate.py
